--- a/configs/texture_7x7.yaml
+++ b/configs/texture_7x7.yaml
@@ -5,17 +5,21 @@ data_loader:
   val_path: "datasets/mask_val"
   texture_path: "datasets/textures"
   train_on_textures: True
+  crop: [7,7]
 train:
   model: "little_vae"
   model_params:
-    in_shape: [3, 8, 8]
+    in_shape: [3, 7, 7]
     n_latent: 16
+  padding: 3
+  kernel_size: [7, 7]
+  stride: 1
   loss_function: "vae_loss"
   loss_parameters:
   batch_size: 32
   device: 'cuda:1'
   learning_rate: 0.0003
   num_epochs: 300
-  save_as: "texture_kernel5"
-  save_dir: "models/texture_kernel5"
+  save_as: "texture_7x7"
+  save_dir: "models/texture_7x7"
   resume: False
