--- a/configs/hierarchical_multiple.yaml
+++ b/configs/hierarchical_multiple.yaml
@@ -5,21 +5,27 @@ data_loader:
   val_path: "datasets/mask_test_2"
   texture_path: "datasets/textures"
   train_on_textures: False
-  crop: [5, 5]
-  textures: [2, 11, 12] 
-test:
-  model: "vae_v2"
+  crop: [7, 7]
+train:
+  model: "hierarchical_vae_7x7"
   padding: 3
   stride: 1
   kernel_size: [7, 7]
   model_params: 
       in_shape: [3, 64, 64]
       n_latent: 16
+  little_vae_params:
+    n_latent: 16
+    in_shape: [3, 7, 7] 
+    path: "models/texture_7x7_multiple/checkpoint_56.tar"
   loss_function: "vae_loss"
   loss_parameters:
   batch_size: 32
   latent_size: 16
   in_shape: [3, 64, 64]
   device: 'cuda:0'
-  model_path: "models/regular_vae_multiple/checkpoint_40.tar"
+  learning_rate: 0.0003
+  num_epochs: 300
+  save_as: "hierarchical_multiple"
+  save_dir: "models/hierarchical_multiple"
   resume: False
