--- a/configs/regular_vae_textures.yaml
+++ b/configs/regular_vae_textures.yaml
@@ -1,11 +1,12 @@
 data_loader:
   name: "Texture"
   input_size: 64
-  train_path: "datasets/mask_train"
-  val_path: "datasets/mask_val"
+  train_path: "datasets/mask_train_2"
+  val_path: "datasets/mask_test_2"
   texture_path: "datasets/textures"
   train_on_textures: False
-  crop: [5, 5] 
+  crop: [5, 5]
+  textures: [2, 11, 12] 
 train:
   model: "vae_v2"
   padding: 3
@@ -21,7 +22,7 @@ train:
   in_shape: [3, 64, 64]
   device: 'cuda:1'
   learning_rate: 0.0003
-  num_epochs: 100
-  save_as: "regular_vae_red"
-  save_dir: "models/regular_vae_red"
+  num_epochs: 60
+  save_as: "regular_vae_multiple"
+  save_dir: "models/regular_vae_multiple"
   resume: False
